welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: ';' expected but integer literal found.
	if (n==93 || n==90) || n==110 { 
                                  ^